--- a/css/main.css
+++ b/css/main.css
@@ -180,7 +180,7 @@
     text-align: center;
     color: #ffffff;
     padding: 14px 45px;
-    margin: 67px 2px 1px 1px;
+    margin: 50px 2px 83px 1px;
 }
 
 
@@ -238,7 +238,7 @@
 }
 .section-two .fourth-row .learnmore-header{
     padding: 30px 0px 100px 0px;
-width: 28%;
+width: 29%;
 
 }
 .section-two .fourth-row .learnmore-header p{
@@ -313,20 +313,20 @@ margin: 67px 2px 1px 1px;
     text-align: center;
     color: rgba(216, 216, 216, 0);
     background-color: rgba(216, 216, 216, 0);
-    -webkit-text-stroke: 1.3px #f7f7f8;
+    -webkit-text-stroke: 2.3px #f7f7f8;
     padding: 257px 1px 121px 1px;
     height: 202px;
 }
 
 .section-three .fourth-row .learnmore-header{
     padding: 30px 0px 100px 0px;
-    width: 28%;
+    width: 33%;
 
 }
 .section-three .fourth-row .learnmore-header p{
     font-family: 'Roboto', sans-serif;
-    font-size: 19px;
-    font-weight: normal;
+    font-size: 18px;
+    font-weight: bold;
     font-style: normal;
     font-stretch: normal;
     line-height: 1.32;
