--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,7 @@
 .section-one .HEADERS .col-7 img{
     width:200px;
     height:79px;
+    margin: 16px 1px 5px 0px;
 }
 .section-one .HEADERS .col-5 {
     align-items: center;
@@ -347,7 +348,7 @@ margin: 67px 2px 1px 1px;
     color: #ffffff;
 }
 .section-three  .carousel-indicators {
-        bottom:0px;
+        bottom:35px;
 }
 
 .section-three  .carousel-indicators li{
@@ -373,9 +374,10 @@ position: relative;
 }
 .section-four-background{
     background-color: #191d24;
+    background-image: linear-gradient(261deg, rgba(0, 0, 0, 0), #191d24) ,url(../Assets/litecuremachine.png);
+    background-position: bottom right;
     background-repeat: no-repeat;
-    background-size: cover;
-    filter:grayscale(1);
+    background-size: 48%;
     position: absolute;
     left: 0;
     right: 0;
@@ -394,15 +396,15 @@ position: relative;
     letter-spacing: -1.7px;
     text-align: center;
     color: #efb817;
-    padding: 80px 0px 30px 0px;
+    padding: 79px 0px 12px 0px;
 }
 .section-four .requestitbro span{
     color: #f7f7f8;
 }
 .section-four .taketheflowbro p{
     font-family: 'Roboto', sans-serif;
-    font-size: 19px;
-    font-weight: 600;
+    font-size: 17px;
+    font-weight: 100;
     font-style: normal;
     font-stretch: normal;
     line-height: 1.32;
@@ -425,7 +427,7 @@ position: relative;
 }
 .section-four .flex-custom .form-top-text{
     font-family: 'Roboto', sans-serif;
-    font-size: 30px;
+    font-size: 28px;
     font-weight: 300;
     font-style: normal;
     font-stretch: normal;
@@ -437,10 +439,15 @@ position: relative;
 {
  background: transparent;
     border:none;
-    border-bottom: solid 1px #c1c5c9;;
-    width: 27%;
+    border-bottom: solid 1px #c1c5c9;
+    width: 45%;
+    color:#c1c5c9;
     line-height: 4;
     margin-top: 26px;
+    font-size: 16px;
+}
+.section-four .flex-custom input::placeholder{
+    color:#c1c5c9;
 }
 .section-four .flex-custom a {
     border: solid 2px #efb817;
