--- a/css/main.css
+++ b/css/main.css
@@ -381,9 +381,9 @@ position: relative;
 .section-four-background{
     background-color: #191d24;
     background-image: linear-gradient(261deg, rgba(0, 0, 0, 0), #191d24) ,url(../Assets/litecuremachine.png);
-    background-position: 133% 95%;
+    background-position: center;
     background-repeat: no-repeat;
-    background-size: 64% 75%;
+    background-size: cover;
     position: absolute;
     left: 0;
     right: 0;
