--- a/css/responsive.css
+++ b/css/responsive.css
@@ -105,6 +105,7 @@
         -webkit-text-stroke: 1px #f7f7f8;
         height: 142px;
         padding: 0px!important;
+        margin: 106px 1px 1px 1px;
     }
     .section-three .fourth-row .learnmore-header{
         width:100%;
@@ -344,6 +345,7 @@
         -webkit-text-stroke: 1px #f7f7f8;
         height: 142px;
         padding: 0px!important;
+        margin: 106px 1px 1px 1px;
     }
     .section-three .fourth-row .learnmore-header{
         width:100%;
@@ -584,6 +586,7 @@
         -webkit-text-stroke: 1px #f7f7f8;
         height: 142px;
         padding: 0px!important;
+        margin: 106px 1px 1px 1px;
     }
     .section-three .fourth-row .learnmore-header{
         width:100%;
@@ -823,6 +826,7 @@
         -webkit-text-stroke: 1px #f7f7f8;
         height: 142px;
         padding: 0px!important;
+        margin: 106px 1px 1px 1px;
     }
     .section-three .fourth-row .learnmore-header{
         width:100%;
@@ -1078,6 +1082,7 @@
         -webkit-text-stroke: 1.3px #f7f7f8;
         height: 142px;
         padding: 0px!important;
+        margin: 106px 1px 1px 1px;
     }
 
     .section-three .fourth-row .learnmore-header{
@@ -1343,6 +1348,7 @@
         -webkit-text-stroke: 2.3px #f7f7f8;
         height: 142px;
         padding: 0px!important;
+        margin: 106px 1px 1px 1px;
     }
 
     .section-three .fourth-row .learnmore-header{
@@ -1608,6 +1614,7 @@
         -webkit-text-stroke: 2.3px #f7f7f8;
         height: 142px;
         padding: 0px!important;
+        margin: 106px 1px 1px 1px;
     }
 
     .section-three .fourth-row .learnmore-header{
